card collapse fixed

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1184,7 +1184,7 @@ header .search-button:hover {
 .Goal .Goal_Card {
     background: #082D40BD;
     border: 1px solid #9cf2a366;
-    padding: 30px 0px 20px;
+    padding: 40px 0px 20px;
     border-radius: 25px;
     transition: 0.3s ease all;
     height: auto;
@@ -1209,7 +1209,7 @@ header .search-button:hover {
 }
 
 .Goal .Goal_Card:hover figure {
-    top: -25%; /* New position when hovered */
+    top: -45%; /* New position when hovered */
 }
 
 .ant-collapse-header{
@@ -1221,7 +1221,7 @@ header .search-button:hover {
 }
 
 .Goal .Goal_Card h4 {
-    padding: 25px 0px 20px;
+    padding: 8px 0px 8px;
     color: #69c970;
 }
 
@@ -1230,9 +1230,9 @@ header .search-button:hover {
     color: #E4E4E4;
     padding: 10px 14px;
     margin: 0;
-    transition: opacity 0.3s ease, height 0.3s ease; /* Smooth transition for text collapse */
-    opacity: 0;
-    height: 0;
+    /* transition: opacity 0.3s ease, height 0.3s ease; Smooth transition for text collapse */
+    /* opacity: 0; */
+    height: auto;
     overflow: hidden;
 }
 
@@ -1247,6 +1247,21 @@ header .search-button:hover {
   }
   
   
+  .animated-arrow {
+    animation: bounce 2s infinite;
+  }
+  
+  @keyframes bounce {
+    0%, 20%, 50%, 80%, 100% {
+      transform: translateY(0);
+    }
+    40% {
+      transform: translateY(-8px);
+    }
+    60% {
+      transform: translateY(-4px);
+    }
+  }
 
 
 
@@ -2116,6 +2131,18 @@ header .search-button:hover {
     width: 60%;
 }
 
+
+.collapse-toggle {
+    cursor: pointer;
+    font-size: 16px;
+    margin-top: 10px;
+  }
+  
+  .collapse-toggle:hover {
+    color: #1890ff; /* Optional hover effect */
+  }
+
+  
 /*
 * ----------------------------------------------------------------------------------------
 * 14.Blog CSS STYLE
